Fixed Tab Header and Tab Labels alignment options

--- a/src/scss/User Interface/Sidebar/tabHeader.scss
+++ b/src/scss/User Interface/Sidebar/tabHeader.scss
@@ -100,6 +100,10 @@
 }
 
 // [Main Workspace] Tab Header - Tab Alignment
+.workspace-tab-header-spacer {
+	display: none;
+}
+
 // Left
 .mod-root {
 	.workspace-tab-header-container-inner {
